Fix issues with German translation

--- a/obs/data/locale/de-DE.ini
+++ b/obs/data/locale/de-DE.ini
@@ -350,13 +350,13 @@ Hotkeys.NumpadDivide="Numpad Dividieren"
 Hotkeys.NumpadAdd="Numpad Addieren"
 Hotkeys.NumpadSubtract="Numpad Subtrahieren"
 Hotkeys.NumpadDecimal="Numpad Komma"
-Hotkeys.AppleKeypadNum="%1 (Tastatur)"
-Hotkeys.AppleKeypadMultiply="* (Tastatur)"
-Hotkeys.AppleKeypadDivide="/ (Tastatur)"
-Hotkeys.AppleKeypadAdd="+ (Tastatur)"
-Hotkeys.AppleKeypadSubtract="- (Tastatur)"
-Hotkeys.AppleKeypadDecimal=". (Tastatur)"
-Hotkeys.AppleKeypadEqual="= (Tastatur)"
+Hotkeys.AppleKeypadNum="%1 (Ziffernblock)"
+Hotkeys.AppleKeypadMultiply="* (Ziffernblock)"
+Hotkeys.AppleKeypadDivide="/ (Ziffernblock)"
+Hotkeys.AppleKeypadAdd="+ (Ziffernblock)"
+Hotkeys.AppleKeypadSubtract="- (Ziffernblock)"
+Hotkeys.AppleKeypadDecimal=", (Ziffernblock)"
+Hotkeys.AppleKeypadEqual="= (Ziffernblock)"
 Hotkeys.MouseButton="Maus %1"
 
 Mute="Stumm"
