UI: Show remaining reconnect timeout duration
When a reconnect is occurring, the user doesn't really know that the
program is waiting to reconnect to the server or not, nor does the user
know how many seconds are remaining until that next attempt.  This will
show the reconnect timeout countdown as it's occurring.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -137,7 +137,8 @@ Basic.PropertiesWindow.NoProperties="No properties available"
 Basic.InteractionWindow="Interacting with '%1'"
 
 # status bar
-Basic.StatusBar.Reconnecting="Disconnected, reconnecting (attempt %1)"
+Basic.StatusBar.Reconnecting="Disconnected, reconnecting in %2 second(s) (attempt %1)"
+Basic.StatusBar.AttemptingReconnect="Attempting to reconnect... (attempt %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconnection successful"
 
 # filters window
