Add latest translations from Crowdin

--- a/obs/data/locale/de-DE.ini
+++ b/obs/data/locale/de-DE.ini
@@ -31,7 +31,7 @@ PreviewProjector="Vollbild-Projektor (Vorschau)"
 SceneProjector="Vollbild-Projektor (Szene)"
 SourceProjector="Vollbild-Projektor (Quelle)"
 Clear="Leeren"
-Reset="Zurücksetzen"
+Revert="Wiederherstellen"
 
 NameExists.Title="Name existiert bereits"
 NameExists.Text="Name wird bereits verwendet."
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="Keine Eigenschaften verfügbar"
 
 Basic.InteractionWindow="Interagiere mit '%1'"
 
-Basic.StatusBar.Reconnecting="Getrennt, wiederverbinden (Versuch %1)"
+Basic.StatusBar.Reconnecting="Verbindung getrennt; Verbindungsversuch %1 in %2 Sekunde(n)"
+Basic.StatusBar.AttemptingReconnect="Versuche die Verbindung wiederherzustellen ... (Versuch %1)"
 Basic.StatusBar.ReconnectSuccessful="Wiederverbindung erfolgreich"
 
 Basic.Filters="Filter"
@@ -363,4 +364,7 @@ Mute="Stumm"
 Unmute="Stumm aus"
 Push-to-mute="Push-To-Mute"
 Push-to-talk="Push-To-Talk"
+
+SceneItemShow="'%1' anzeigen"
+SceneItemHide="'%1' verstecken"
 
