--- a/obs/data/locale/fi-FI.ini
+++ b/obs/data/locale/fi-FI.ini
@@ -30,6 +30,8 @@ DroppedFrames="Pudotettuja frameja %1 (%2%)"
 PreviewProjector="Heijasta monitoriin (Esikatselu)"
 SceneProjector="Heijasta monitoriin (Skene)"
 SourceProjector="Heijasta monitoriin (Lähde)"
+Clear="Tyhjennä"
+Revert="Palauta"
 
 NameExists.Title="Nimi on jo olemassa"
 NameExists.Text="Nimi on jo käytössä."
@@ -114,7 +116,8 @@ Basic.PropertiesWindow.NoProperties="Ominaisuuksia ei ole saatavilla"
 
 Basic.InteractionWindow="Vuorovaikutetaan '%1' kanssa"
 
-Basic.StatusBar.Reconnecting="Yhteys katkaistu, yhdistetään uudelleen (yritys %1)"
+Basic.StatusBar.Reconnecting="Yhteys katkaistu, yhdistetään uudelleen %2 sekunnissa (yrityskerta %1)"
+Basic.StatusBar.AttemptingReconnect="Yhdistetään uudelleen... (yrityskerta %1)"
 Basic.StatusBar.ReconnectSuccessful="Uudelleenyhdistys onnistui"
 
 Basic.Filters="Suodattimet"
@@ -291,6 +294,10 @@ Basic.Settings.Audio.DesktopDevice2="Äänentoistolaite 2"
 Basic.Settings.Audio.AuxDevice="Mic/Aux -äänilaite"
 Basic.Settings.Audio.AuxDevice2="Mic/Aux -äänilaite 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Aux -äänilaite 3"
+Basic.Settings.Audio.EnablePushToMute="Käytä Push-to-mute"
+Basic.Settings.Audio.PushToMuteDelay="Push-to-mute viive"
+Basic.Settings.Audio.EnablePushToTalk="Käytä Push-to-talk"
+Basic.Settings.Audio.PushToTalkDelay="Push-to-talk viive"
 
 Basic.Settings.Advanced="Lisäasetukset"
 Basic.Settings.Advanced.FormatWarning="Varoitus: Muut väriformaatit kuin NV12, ovat tarkoitettuja tallentamiseen eikä niitä suositella lähetyksiin. Lähetykset saattavat johtaa suurempaan CPU:n kulutukseen väriformaatin muutoksen vuoksi."
@@ -309,7 +316,56 @@ Basic.AdvAudio.Panning="Balanssi"
 Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
 Basic.AdvAudio.AudioTracks="Raidat"
 
+Basic.Settings.Hotkeys="Pikanäppäimet"
+Basic.Settings.Hotkeys.Pair="Yhteiset näppäinyhdistelmät \"%1\":n kanssa toimivat \"togglena\""
 
+Basic.Hotkeys.StartStreaming="Aloita lähetys"
+Basic.Hotkeys.StopStreaming="Pysäytä lähetys"
+Basic.Hotkeys.StartRecording="Aloita tallennus"
+Basic.Hotkeys.StopRecording="Pysäytä tallennus"
+Basic.Hotkeys.SelectScene="Vaihda skeneen"
 
+Hotkeys.Insert="Insert"
+Hotkeys.Delete="Delete"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Askelpalautin"
+Hotkeys.Tab="Tabulaattori"
+Hotkeys.Print="Print Screen"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Vasen"
+Hotkeys.Right="Oikea"
+Hotkeys.Up="Ylös"
+Hotkeys.Down="Alas"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Menu"
+Hotkeys.Space="Välilyönti"
+Hotkeys.NumpadNum="Numpad %1"
+Hotkeys.NumpadMultiply="Numpad *"
+Hotkeys.NumpadDivide="Numpad /"
+Hotkeys.NumpadAdd="Numpad +"
+Hotkeys.NumpadSubtract="Numpad -"
+Hotkeys.NumpadDecimal="Numpad ,"
+Hotkeys.AppleKeypadNum="%1 (Keypad)"
+Hotkeys.AppleKeypadMultiply="* (Keypad)"
+Hotkeys.AppleKeypadDivide="/ (Keypad)"
+Hotkeys.AppleKeypadAdd="+ (Keypad)"
+Hotkeys.AppleKeypadSubtract="- (Keypad)"
+Hotkeys.AppleKeypadDecimal=". (Keypad)"
+Hotkeys.AppleKeypadEqual="= (Keypad)"
+Hotkeys.MouseButton="Hiiren %1"
 
+Mute="Mykistä"
+Unmute="Poista mykistys"
+Push-to-mute="Push-to-mute"
+Push-to-talk="Push-to-talk"
+
+SceneItemShow="Näytä \"%1\""
+SceneItemHide="Piilota \"%1\""
 
