--- a/obs/data/locale/fr-FR.ini
+++ b/obs/data/locale/fr-FR.ini
@@ -31,7 +31,7 @@ PreviewProjector="Projecteur plein écran (aperçu)"
 SceneProjector="Projecteur plein écran (scène)"
 SourceProjector="Projecteur plein écran (source)"
 Clear="Effacer"
-Reset="Réinitialiser"
+Revert="Annuler"
 
 NameExists.Title="Ce nom existe déjà"
 NameExists.Text="Ce nom est déjà utilisé."
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="Aucune propriété disponible"
 
 Basic.InteractionWindow="Intéragir avec '%1'"
 
-Basic.StatusBar.Reconnecting="Déconnecté, reconnexion (tentative n° %1)"
+Basic.StatusBar.Reconnecting="Déconnecté, reconnexion dans %2 seconde(s) (tentative n° %1)"
+Basic.StatusBar.AttemptingReconnect="Tentative de reconnexion... (tentative n° %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconnexion réussie"
 
 Basic.Filters="Filtres"
@@ -363,4 +364,7 @@ Mute="Rendre muet"
 Unmute="Rendre parlant"
 Push-to-mute="Push-to-mute"
 Push-to-talk="Push-to-talk"
+
+SceneItemShow="Afficher '%1'"
+SceneItemHide="Cacher '%1'"
 
