--- a/obs/data/locale/gl-ES.ini
+++ b/obs/data/locale/gl-ES.ini
@@ -30,7 +30,7 @@ DroppedFrames="Fotogramas perdidos %1 (%2%)"
 PreviewProjector="Proxector de pantalla completa (vista previa)"
 SceneProjector="Proxector de pantalla completa (escena)"
 SourceProjector="Proxector de pantalla completa (fonte)"
-Reset="Restablecer"
+Revert="Anular"
 
 NameExists.Title="O nome xa existe"
 NameExists.Text="O nome xa está en uso."
@@ -114,7 +114,8 @@ Basic.PropertiesWindow.NoProperties="Ningunha propiedade dispoñible"
 
 Basic.InteractionWindow="Interactuando con '%1'"
 
-Basic.StatusBar.Reconnecting="Sen conexión, reconectando (intento %1)"
+Basic.StatusBar.Reconnecting="Desconectado, reconectando en %2 segundo(s) (tentativa número %1)"
+Basic.StatusBar.AttemptingReconnect="Tentando reconectar... (tentativa número %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconexión satisfactoria"
 
 Basic.Filters="Filtros"
@@ -315,9 +316,31 @@ Basic.Hotkeys.StopRecording="Deter gravación"
 
 Hotkeys.Insert="Inserir"
 Hotkeys.Delete="Eliminar"
+Hotkeys.NumLock="BLOQ NÚM"
+Hotkeys.ScrollLock="BLOQ DESPR"
+Hotkeys.CapsLock="BLOQ MAIÚS"
+Hotkeys.Backspace="Retroceso"
+Hotkeys.Tab="Tabulación"
 Hotkeys.Print="Imprimir"
 Hotkeys.Windows="Windows"
 Hotkeys.Menu="Menú"
 Hotkeys.Space="Espazo"
+Hotkeys.NumpadNum="Teclado numérico %1"
+Hotkeys.NumpadMultiply="Multiplicación do teclado númerico"
+Hotkeys.NumpadDivide="División do teclado numérico"
+Hotkeys.NumpadAdd="Suma do teclado numérico"
+Hotkeys.NumpadSubtract="Resta do teclado numérico"
+Hotkeys.NumpadDecimal="Decimal do teclado numérico"
+Hotkeys.AppleKeypadNum="%1 (teclado numérico)"
+Hotkeys.AppleKeypadMultiply="* (teclado numérico)"
+Hotkeys.AppleKeypadDivide="/ (teclado numérico)"
+Hotkeys.AppleKeypadAdd="+ (teclado numérico)"
+Hotkeys.AppleKeypadSubtract="- (teclado numérico)"
+Hotkeys.AppleKeypadDecimal=". (teclado numérico)"
+Hotkeys.AppleKeypadEqual="= (teclado numérico)"
+Hotkeys.MouseButton="Rato %1"
 
+
+SceneItemShow="Mostrar '%1'"
+SceneItemHide="Agochar '%1'"
 
