--- a/obs/data/locale/hr-HR.ini
+++ b/obs/data/locale/hr-HR.ini
@@ -31,7 +31,7 @@ PreviewProjector="Projektor celog ekrana (pregled)"
 SceneProjector="Projektor celog ekrana (scena)"
 SourceProjector="Projektor celog ekrana (izvor)"
 Clear="Poništi"
-Reset="Vrati na fabričko"
+Revert="Povrati"
 
 NameExists.Title="Ime već postoji"
 NameExists.Text="Ime je već u upotrebi."
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="Nema dostupnih svojstava"
 
 Basic.InteractionWindow="Interakcija sa '%1'"
 
-Basic.StatusBar.Reconnecting="Otkačen sa servera, ponovno povezivanje (pokušaj %1)"
+Basic.StatusBar.Reconnecting="Veza je prekinuta, ponovno povezivanje za %2 sekund(i) (%1 pokušaj)"
+Basic.StatusBar.AttemptingReconnect="Pokušavam ponovno povezivanje... (%1 pokušaj)"
 Basic.StatusBar.ReconnectSuccessful="Ponovno povezivanje uspešno"
 
 Basic.Filters="Filteri"
@@ -363,4 +364,7 @@ Mute="Mutiraj"
 Unmute="Odmutiraj"
 Push-to-mute="Stisni-za-mutiranje"
 Push-to-talk="Stisni-za-govor"
+
+SceneItemShow="Prikaži '%1'"
+SceneItemHide="Sakrij '%1'"
 
