--- a/obs/data/locale/hu-HU.ini
+++ b/obs/data/locale/hu-HU.ini
@@ -31,7 +31,7 @@ PreviewProjector="Teljes képernyős projektor (Előnézet)"
 SceneProjector="Teljes képernyős projektor (Jelenet)"
 SourceProjector="Teljes képernyős projektor (Forrás)"
 Clear="Törlés"
-Reset="Újraindít"
+Revert="Visszavonás"
 
 NameExists.Title="A megadott név már létezik"
 NameExists.Text="A név már használatban van."
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="Nincsenek elérhető tulajdonságok"
 
 Basic.InteractionWindow="Egymásra hatnak \"%1\"-el"
 
-Basic.StatusBar.Reconnecting="Szétkapcsolva, újracsatlakozás (kísérlet: %1)"
+Basic.StatusBar.Reconnecting="Szétkapcsolt, újrakapcsolódás %2 másodperc múlva (%1. kísérlet)"
+Basic.StatusBar.AttemptingReconnect="Újrakapcsolódási kísérlet... (%1. próbálkozás)"
 Basic.StatusBar.ReconnectSuccessful="Sikeres újracsatlakozás"
 
 Basic.Filters="Szűrők"
@@ -363,4 +364,7 @@ Mute="Némítás"
 Unmute="Némítás megszüntetése"
 Push-to-mute="Push-to-mute"
 Push-to-talk="Push-to-talk"
+
+SceneItemShow="Mutassa '%1'"
+SceneItemHide="Elrejti '%1'"
 
