--- a/obs/data/locale/it-IT.ini
+++ b/obs/data/locale/it-IT.ini
@@ -31,7 +31,7 @@ PreviewProjector="Proiettore Schermo intero (Anteprima)"
 SceneProjector="Proiettore Schermo intero (Scena)"
 SourceProjector="Proiettore Schermo intero (Sorgente)"
 Clear="Svuota"
-Reset="Reset"
+Revert="Ripristina"
 
 NameExists.Title="Il nome esiste già"
 NameExists.Text="Il nome è già in uso."
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="Nessuna proprietà disponibile"
 
 Basic.InteractionWindow="Interagendo con '%1'"
 
-Basic.StatusBar.Reconnecting="Disconnesso, riconnessione (riprovo tra %1)"
+Basic.StatusBar.Reconnecting="Disconnesso, riconnessione in %2 secondi (tentativo%1)"
+Basic.StatusBar.AttemptingReconnect="Tentativo di riconnessione... (tentativo %1)"
 Basic.StatusBar.ReconnectSuccessful="Riconnessione eseguita"
 
 Basic.Filters="Filtri"
@@ -363,4 +364,7 @@ Mute="Silenzia"
 Unmute="Riattiva"
 Push-to-mute="Push-to-mute"
 Push-to-talk="Push-to-talk"
+
+SceneItemShow="Mostra '%1'"
+SceneItemHide="Nascondi '%1'"
 
