--- a/obs/data/locale/ko-KR.ini
+++ b/obs/data/locale/ko-KR.ini
@@ -31,7 +31,7 @@ PreviewProjector="전체화면 프로젝터 (미리보기)"
 SceneProjector="전체화면 프로젝터 (장면)"
 SourceProjector="전체화면 프로젝터 (소스)"
 Clear="단축키 해제"
-Reset="초기화"
+Revert="되돌리기"
 
 NameExists.Title="해당 이름이 이미 존재합니다 "
 NameExists.Text="그 이름은 이미 사용 중입니다. "
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="가능한 설정이 없음"
 
 Basic.InteractionWindow="'%1' 과 상호 작용"
 
-Basic.StatusBar.Reconnecting="연결 해제됨, 재접속 중 (시도%1)"
+Basic.StatusBar.Reconnecting="연결이 끊겼습니다, %2 초에 다시 연결합니다 (시도 %1)"
+Basic.StatusBar.AttemptingReconnect="재접속 중... (시도 %1)"
 Basic.StatusBar.ReconnectSuccessful="재접속 성공"
 
 Basic.Filters="필터"
@@ -363,4 +364,7 @@ Mute="음소거"
 Unmute="음소거 해제"
 Push-to-mute="누르면 음소거"
 Push-to-talk="누르며 말하기"
+
+SceneItemShow="'%1' 표시"
+SceneItemHide="'%1' 숨기기"
 
