--- a/obs/data/locale/nl-NL.ini
+++ b/obs/data/locale/nl-NL.ini
@@ -31,7 +31,7 @@ PreviewProjector="Full-screen Projector (Preview)"
 SceneProjector="Full-screen Projector (Scène)"
 SourceProjector="Full-screen Projector (Bron)"
 Clear="Wissen"
-Reset="Herstellen"
+Revert="Herstellen"
 
 NameExists.Title="Naam bestaat al"
 NameExists.Text="De naam is al in gebruik."
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="Geen eigenschappen beschikbaar"
 
 Basic.InteractionWindow="Interactie met '%1'"
 
-Basic.StatusBar.Reconnecting="Verbinding verbroken, opnieuw verbinden (poging %1)"
+Basic.StatusBar.Reconnecting="Verbinding verbroken, opnieuw verbinden over %2 second(en) (poging %1)"
+Basic.StatusBar.AttemptingReconnect="Opnieuw verbinden... (poging %1)"
 Basic.StatusBar.ReconnectSuccessful="Opnieuw verbinden gelukt"
 
 Basic.Filters="Filters"
@@ -363,4 +364,7 @@ Mute="Mute"
 Unmute="Unmute"
 Push-to-mute="Push-to-mute"
 Push-to-talk="Push-to-talk"
+
+SceneItemShow="Toon '%1'"
+SceneItemHide="Verberg '%1'"
 
