--- a/obs/data/locale/pl-PL.ini
+++ b/obs/data/locale/pl-PL.ini
@@ -31,7 +31,7 @@ PreviewProjector="Wyświetlanie na pełnym ekranie (podgląd)"
 SceneProjector="Wyświetlanie na pełnym ekranie (scena)"
 SourceProjector="Wyświetlanie na pełnym ekranie (źródło)"
 Clear="Wyczyść"
-Reset="Reset"
+Revert="Przywróć"
 
 NameExists.Title="Nazwa już istnieje"
 NameExists.Text="Nazwa jest już używana."
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="Brak właściwości"
 
 Basic.InteractionWindow="Interakcja z '%1'"
 
-Basic.StatusBar.Reconnecting="Rozłączono. Ponowne łączenie (próba %1)"
+Basic.StatusBar.Reconnecting="Rozłączony, ponowne połączenie za %2 s (próba %1)"
+Basic.StatusBar.AttemptingReconnect="Próba ponownego połączenia... (próba %1)"
 Basic.StatusBar.ReconnectSuccessful="Ponowne podłączenie udane"
 
 Basic.Filters="Filtry"
@@ -363,4 +364,7 @@ Mute="Wyciszenie"
 Unmute="Wyłącz wyciszenie"
 Push-to-mute="Naciśnij-aby-wyciszyć"
 Push-to-talk="Naciśnij-aby-mówić"
+
+SceneItemShow="Pokaż '%1'"
+SceneItemHide="Ukryj '%1'"
 
