--- a/obs/data/locale/ro-RO.ini
+++ b/obs/data/locale/ro-RO.ini
@@ -19,6 +19,7 @@ Properties="Proprietăţi"
 MoveUp="Mută în sus"
 MoveDown="Mută în jos"
 Settings="Setări"
+Display="Display"
 Name="Nume"
 Exit="Ieșire"
 Mixer="Mixer"
@@ -26,6 +27,11 @@ Browse="Căutare"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Cadre Pierdute %1 (%2%)"
+PreviewProjector="Proiector pe tot ecranul (Previzualizare)"
+SceneProjector="Proiector pe tot ecranul (Scena)"
+SourceProjector="Proiector pe tot ecranul (Sursa)"
+Clear="Ştergeţi"
+Revert="Inverseaza"
 
 NameExists.Title="Numele există deja"
 NameExists.Text="Acest nume este deja folosit."
@@ -86,12 +92,14 @@ Basic.AuxDevice4="Microfon/Aux 4"
 Basic.Scene="Scena"
 Basic.DisplayCapture="Captura de ecran"
 
+Basic.Main.PreviewConextMenu.Enable="Activeaza previzualizarea"
 
 Basic.Main.AddSceneDlg.Title="Adauga scena"
 Basic.Main.AddSceneDlg.Text="Vă rugăm să introduceţi numele de scena"
 
 Basic.Main.DefaultSceneName.Text="Scena %1"
 
+Basic.Main.PreviewDisabled="Previzualizarea este în prezent dezactivată"
 
 Basic.SourceSelect="Creaţi/Selectaţi Sursa"
 Basic.SourceSelect.CreateNew="Creează nouă"
@@ -107,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="Nicio proprietate disponibila"
 
 Basic.InteractionWindow="Interacționează cu '%1'"
 
-Basic.StatusBar.Reconnecting="Deconectat, se reconectează (încercarea %1)"
+Basic.StatusBar.Reconnecting="Deconectat, reconectare în %2 secunda(e) (încercarea %1)"
+Basic.StatusBar.AttemptingReconnect="Încearcă să se reconecteze... (încercarea %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconectat cu succes"
 
 Basic.Filters="Filtre"
@@ -284,8 +293,13 @@ Basic.Settings.Audio.DesktopDevice2="Dispozitiv Audio Desktop 2"
 Basic.Settings.Audio.AuxDevice="Dispozitiv Audio microfon/auxiliar"
 Basic.Settings.Audio.AuxDevice2="Dispozitiv Audio microfon/auxiliar 2"
 Basic.Settings.Audio.AuxDevice3="Dispozitiv Audio microfon/auxiliar 3"
+Basic.Settings.Audio.EnablePushToMute="Porneste Push-to-mute"
+Basic.Settings.Audio.PushToMuteDelay="Intarziere Push-to-mute"
+Basic.Settings.Audio.EnablePushToTalk="Permite Push-to-talk"
+Basic.Settings.Audio.PushToTalkDelay="Intarziere Push-to-talk"
 
 Basic.Settings.Advanced="Avansat"
+Basic.Settings.Advanced.FormatWarning="Atentie: Formatele de culori diferite de NV12 sunt facute pentru inregistrare si nu sunt recomandate in cazul streaming-ului. Streaming-ul e posibil sa ceara mai multe resurse CPU datorita conversiei formatului culorii."
 Basic.Settings.Advanced.Audio.BufferingTime="Timp tampon Audio"
 Basic.Settings.Advanced.Video.ColorFormat="Format de culoare"
 Basic.Settings.Advanced.Video.ColorSpace="Spaţiul de culoare YUV"
@@ -301,7 +315,56 @@ Basic.AdvAudio.Panning="Panning"
 Basic.AdvAudio.SyncOffset="Compensare Sincronizare (ms)"
 Basic.AdvAudio.AudioTracks="Piese"
 
+Basic.Settings.Hotkeys="Taste Rapide/Hotkeys"
+Basic.Settings.Hotkeys.Pair="Combinaţiile de taste în comun cu \"%1\" acţionează precum un comutator"
 
+Basic.Hotkeys.StartStreaming="Porneşte Stream"
+Basic.Hotkeys.StopStreaming="Oprește streaming-ul"
+Basic.Hotkeys.StartRecording="Începe înregistrarea"
+Basic.Hotkeys.StopRecording="Oprește înregistrarea"
+Basic.Hotkeys.SelectScene="Comutaţi la scena"
 
+Hotkeys.Insert="Inserare"
+Hotkeys.Delete="Ştergeţi"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Print"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Stânga"
+Hotkeys.Right="Dreapta"
+Hotkeys.Up="Sus"
+Hotkeys.Down="Jos"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Meniu"
+Hotkeys.Space="Space"
+Hotkeys.NumpadNum="NumPad %1"
+Hotkeys.NumpadMultiply="Numpad Multiplica"
+Hotkeys.NumpadDivide="Numpad Divide"
+Hotkeys.NumpadAdd="Numpad Aduna"
+Hotkeys.NumpadSubtract="Numpad Scade"
+Hotkeys.NumpadDecimal="Numpad Zecimal"
+Hotkeys.AppleKeypadNum="%1 (Keypad)"
+Hotkeys.AppleKeypadMultiply="* (Tastatura)"
+Hotkeys.AppleKeypadDivide="/ (Tastatura)"
+Hotkeys.AppleKeypadAdd="+ (Tastatura)"
+Hotkeys.AppleKeypadSubtract="- (Tastatura)"
+Hotkeys.AppleKeypadDecimal=". (Tastatura)"
+Hotkeys.AppleKeypadEqual="= (Tastatura)"
+Hotkeys.MouseButton="Mouse %1"
 
+Mute="Mut"
+Unmute="Dezactiveaza Mut"
+Push-to-mute="Push-to-mut"
+Push-to-talk="Push-to-talk"
+
+SceneItemShow="Arată \"%1\""
+SceneItemHide="Ascunde \"%1\""
 
