--- a/obs/data/locale/zh-CN.ini
+++ b/obs/data/locale/zh-CN.ini
@@ -31,7 +31,7 @@ PreviewProjector="全屏投影仪(预览)"
 SceneProjector="全屏投影仪 (现场)"
 SourceProjector="全屏投影仪(源)"
 Clear="清除"
-Reset="重置"
+Revert="还原"
 
 NameExists.Title="名称已存在"
 NameExists.Text="该名称已被使用"
@@ -115,7 +115,8 @@ Basic.PropertiesWindow.NoProperties="没有可用的属性"
 
 Basic.InteractionWindow="与'%1'交互"
 
-Basic.StatusBar.Reconnecting="已断开连接，正在重连（尝试 %1）"
+Basic.StatusBar.Reconnecting="断开, 重新连接在 %2 秒内 (尝试 %1)"
+Basic.StatusBar.AttemptingReconnect="尝试重新连接... (尝试 %1)"
 Basic.StatusBar.ReconnectSuccessful="重连成功"
 
 Basic.Filters="过滤器"
@@ -363,4 +364,7 @@ Mute="静音"
 Unmute="取消静音"
 Push-to-mute="按住静音"
 Push-to-talk="按住讲话"
+
+SceneItemShow="显示 '%1'"
+SceneItemHide="隐藏 '%1'"
 
