--- a/plugins/obs-filters/data/locale/fi-FI.ini
+++ b/plugins/obs-filters/data/locale/fi-FI.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Kuvan viide (Async)"
 CropFilter="Rajaa"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Väriavain"
+SharpnessFilter="Terävöitä"
 DelayMs="Viive (MS)"
 Type="Tyyppi"
 MaskBlendType.MaskColor="Alpha-maski (värikanava)"
