--- a/plugins/obs-filters/data/locale/ro-RO.ini
+++ b/plugins/obs-filters/data/locale/ro-RO.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Întârziere video (asincron)"
 CropFilter="Crop"
 ChromaKeyFilter="Cheia Chroma"
 ColorKeyFilter="Culoare cheie"
+SharpnessFilter="Accentuează"
 DelayMs="Întârziere (milisecunde)"
 Type="Tip"
 MaskBlendType.MaskColor="Masca Alpha (Canal Culoare)"
