--- a/plugins/win-dshow/data/locale/ro-RO.ini
+++ b/plugins/win-dshow/data/locale/ro-RO.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Activează"
 Buffering.Disable="Dezactivează"
 Activate="Activează"
 Deactivate="Dezactivează"
+FlipVertically="Roteste Vertical"
 
 Bitrate="Bitrate"
 Encoder.C985="AVerMedia h264 Encoder (c985)"
