--- a/obs/data/locale/eu-ES.ini
+++ b/obs/data/locale/eu-ES.ini
@@ -31,7 +31,6 @@ PreviewProjector="Ikusleiho-osoko Proiektorea (Aurreikuspena)"
 SceneProjector="Ikusleiho-osoko Proiektorea (Agerraldia)"
 SourceProjector="Ikusleiho-osoko Proiektorea (Iturburua)"
 Clear="Garbitu"
-Reset="Berrezarri"
 
 NameExists.Title="Izena badago jadanik"
 NameExists.Text="Izena jadanik erabilia da."
@@ -115,7 +114,6 @@ Basic.PropertiesWindow.NoProperties="Ezaugarriak ez daude eskuragarri"
 
 Basic.InteractionWindow="Elkarrekintza '%1'-rekin"
 
-Basic.StatusBar.Reconnecting="Etenda, berrelkartzen (saiakera %1)"
 Basic.StatusBar.ReconnectSuccessful="Ber-elkarketa ongi"
 
 Basic.Filters="Iragazkiak"
@@ -340,6 +338,8 @@ Hotkeys.Left="Ezker"
 Hotkeys.Right="Eskuin"
 Hotkeys.Up="Gora"
 Hotkeys.Down="Behera"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
 Hotkeys.Menu="Menua"
 Hotkeys.Space="Tartea"
 Hotkeys.NumpadNum="Zbk-panela %1"
@@ -361,4 +361,7 @@ Mute="Mututu"
 Unmute="Desmututu"
 Push-to-mute="Sakatu-mututzeko"
 Push-to-talk="Sakatu-hitz-egiteko"
+
+SceneItemShow="Erakutsi '%1'"
+SceneItemHide="Ezkutatu '%1'"
 
