UI: Add "Show" button to password text properties
Allows the user to be able to optionally toggle the password text if
they wish.  Mostly useful for troubleshooting purposes.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -37,6 +37,7 @@ SceneProjector="Fullscreen Projector (Scene)"
 SourceProjector="Fullscreen Projector (Source)"
 Clear="Clear"
 Revert="Revert"
+Show="Show"
 
 # "name already exists" dialog box
 NameExists.Title="Name already exists"
