win-dshow: Add audio output mode options
This allows the ability to output the audio of the device as desktop
audio (via the WaveOut or DirectSound audio renderers) instead of
capturing the audio only.

In the future, we'll implement audio monitoring which will make this
feature obsolete, but for the time being I decided to add this option as
a temporary measure to allow users to play the audio from their devices
via the DirectShow output.

--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -18,6 +18,10 @@ Resolution="Resolution"
 VideoFormat="Video Format"
 VideoFormat.Any="Any"
 VideoFormat.Unknown="Unknown (%1)"
+AudioOutputMode="Audio Output Mode"
+AudioOutputMode.Capture="Capture audio only"
+AudioOutputMode.DirectSound="Output desktop audio (DirectSound)"
+AudioOutputMode.WaveOut="Output desktop audio (WaveOut)"
 UseCustomAudioDevice="Use custom audio device"
 AudioDevice="Audio Device"
 Buffering="Buffering"
