UI: Add warning if using no/multiple tracks
Certain output formats don't support multiple tracks, so it's important
to warn the user if they select multiple tracks.

Also warn the user if they select no tracks.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -426,3 +426,7 @@ Push-to-talk="Push-to-talk"
 # scene item hotkeys
 SceneItemShow="Show '%1'"
 SceneItemHide="Hide '%1'"
+
+# Output warnings
+OutputWarnings.NoTracksSelected="You must select at least one track"
+OutputWarnings.MultiTrackRecording="Warning: Certain formats (such as FLV) do not support multiple tracks per recording"
