--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -6,6 +6,7 @@ ScrollFilter="Scroll"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Color Key"
 SharpnessFilter="Sharpen"
+NoiseGate="Noise Gate"
 DelayMs="Delay (milliseconds)"
 Type="Type"
 MaskBlendType.MaskColor="Alpha Mask (Color Channel)"
@@ -42,3 +43,8 @@ Red="Red"
 Green="Green"
 Blue="Blue"
 Magenta="Magenta"
+NoiseGate.OpenThreshold="Open Threshold (db)"
+NoiseGate.CloseThreshold="Close Threshold (db)"
+NoiseGate.AttackTime="Attack Time (milliseconds)"
+NoiseGate.HoldTime="Hold Time (milliseconds)"
+NoiseGate.ReleaseTime="Release Time (milliseconds)"
