obs-filters: Add scroll filter

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -2,6 +2,7 @@ ColorFilter="Color Correction"
 MaskFilter="Image Mask/Blend"
 AsyncDelayFilter="Video Delay (Async)"
 CropFilter="Crop"
+ScrollFilter="Scroll"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Color Key"
 SharpnessFilter="Sharpen"
@@ -32,6 +33,10 @@ Crop.Bottom="Bottom"
 Crop.Width="Width"
 Crop.Height="Height"
 Crop.Relative="Relative"
+ScrollFilter.SpeedX="Horizontal Speed"
+ScrollFilter.SpeedY="Vertical Speed"
+ScrollFilter.LimitWidth="Limit Width"
+ScrollFilter.LimitHeight="Limit Height"
 CustomColor="Custom Color"
 Red="Red"
 Green="Green"
