UI: Add New/Duplicate/Untitled locale text

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -38,6 +38,9 @@ SourceProjector="Fullscreen Projector (Source)"
 Clear="Clear"
 Revert="Revert"
 Show="Show"
+Untitled="Untitled"
+New="New"
+Duplicate="Duplicate"
 
 # "name already exists" dialog box
 NameExists.Title="Name already exists"
