UI: Add scene collections
Adds scene collections to the menu bar, which allows you to duplicate,
rename, remove, or add clean new scene collections.

Scene files are now stored in ./obs-studio/basic/scenes directory with
filesystem-safe names.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -42,6 +42,9 @@ Untitled="Untitled"
 New="New"
 Duplicate="Duplicate"
 
+# title bar strings
+TitleBar.Scenes="Scenes"
+
 # "name already exists" dialog box
 NameExists.Title="Name already exists"
 NameExists.Text="The name is already in use."
@@ -125,6 +128,13 @@ Basic.Main.AddSceneDlg.Text="Please enter the name of the scene"
 
 # add scene suggested name
 Basic.Main.DefaultSceneName.Text="Scene %1"
+
+# add scene collection dialog
+Basic.Main.AddSceneCollection.Title="Add Scene Collection"
+Basic.Main.AddSceneCollection.Text="Please enter the name of the scene collection"
+
+# rename scene collection dialog
+Basic.Main.RenameSceneCollection.Title="Rename Scene Collection"
 
 # preview window disabled
 Basic.Main.PreviewDisabled="Preview is currently disabled"
@@ -238,6 +248,9 @@ Basic.MainMenu.Edit.Order.MoveDown="Move &Down"
 Basic.MainMenu.Edit.Order.MoveToTop="Move to &Top"
 Basic.MainMenu.Edit.Order.MoveToBottom="Move to &Bottom"
 Basic.MainMenu.Edit.AdvAudio="&Advanced Audio Properties"
+
+# basic mode profile/scene collection menus
+Basic.MainMenu.SceneCollection="&Scene Collection"
 
 # basic mode help menu
 Basic.MainMenu.Help="&Help"
