--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -43,6 +43,7 @@ New="New"
 Duplicate="Duplicate"
 
 # title bar strings
+TitleBar.Profile="Profile"
 TitleBar.Scenes="Scenes"
 
 # "name already exists" dialog box
@@ -135,6 +136,13 @@ Basic.Main.AddSceneCollection.Text="Please enter the name of the scene collectio
 
 # rename scene collection dialog
 Basic.Main.RenameSceneCollection.Title="Rename Scene Collection"
+
+# add profile dialog
+AddProfile.Title="Add Profile"
+AddProfile.Text="Please enter the name of the profile"
+
+# rename profile dialog
+RenameProfile.Title="Rename Profile"
 
 # preview window disabled
 Basic.Main.PreviewDisabled="Preview is currently disabled"
@@ -251,6 +259,7 @@ Basic.MainMenu.Edit.AdvAudio="&Advanced Audio Properties"
 
 # basic mode profile/scene collection menus
 Basic.MainMenu.SceneCollection="&Scene Collection"
+Basic.MainMenu.Profile="&Profile"
 
 # basic mode help menu
 Basic.MainMenu.Help="&Help"
