UI: Add menu to visit website to basic main window

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -238,6 +238,7 @@ Basic.MainMenu.Edit.AdvAudio="&Advanced Audio Properties"
 
 # basic mode help menu
 Basic.MainMenu.Help="&Help"
+Basic.MainMenu.Help.Website="Visit &Website"
 Basic.MainMenu.Help.Logs="&Log Files"
 Basic.MainMenu.Help.Logs.ShowLogs="&Show Log Files"
 Basic.MainMenu.Help.Logs.UploadCurrentLog="Upload &Current Log File"
