obs-filters: Change 'db' abbreviation to 'dB'

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -43,8 +43,8 @@ Red="Red"
 Green="Green"
 Blue="Blue"
 Magenta="Magenta"
-NoiseGate.OpenThreshold="Open Threshold (db)"
-NoiseGate.CloseThreshold="Close Threshold (db)"
+NoiseGate.OpenThreshold="Open Threshold (dB)"
+NoiseGate.CloseThreshold="Close Threshold (dB)"
 NoiseGate.AttackTime="Attack Time (milliseconds)"
 NoiseGate.HoldTime="Hold Time (milliseconds)"
 NoiseGate.ReleaseTime="Release Time (milliseconds)"
