UI: Add menu options to open settings folders
Adds "Show Settings Folder" and "Show Profile Folder" items to the file
menu.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -231,6 +231,8 @@ Basic.MainMenu.File.Import="&Import"
 Basic.MainMenu.File.ShowRecordings="Show &Recordings"
 Basic.MainMenu.File.Remux="Re&mux Recordings"
 Basic.MainMenu.File.Settings="&Settings"
+Basic.MainMenu.File.ShowSettingsFolder="Show Settings Folder"
+Basic.MainMenu.File.ShowProfileFolder="Show Profile Folder"
 Basic.MainMenu.File.Exit="E&xit"
 
 # basic mode edit menu
