UI: Toggle password "Show" button text when clicked

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -38,6 +38,7 @@ SourceProjector="Fullscreen Projector (Source)"
 Clear="Clear"
 Revert="Revert"
 Show="Show"
+Hide="Hide"
 Untitled="Untitled"
 New="New"
 Duplicate="Duplicate"
