rtmp-services: Add auth settings for custom server
Username and Password prompts have been added to the custom RTMP server UI
and saved in the config file alongside server and key.

--- a/plugins/rtmp-services/data/locale/en-US.ini
+++ b/plugins/rtmp-services/data/locale/en-US.ini
@@ -3,3 +3,6 @@ CustomStreamingServer="Custom Streaming Server"
 Service="Service"
 Server="Server"
 StreamKey="Stream key"
+UseAuth="Use authentication"
+Username="Username"
+Password="Password"
