obs-x264: Change string for translation
Adding the acronym "VFR" & keeping it this way in the string could be a good thing as the acronym is used worldwide in video encoding.

--- a/plugins/obs-x264/data/locale/en-US.ini
+++ b/plugins/obs-x264/data/locale/en-US.ini
@@ -9,4 +9,4 @@ Profile="Profile"
 Tune="Tune"
 None="(None)"
 EncoderOptions="x264 Options (separated by space)"
-VFR="Variable Framerate"
+VFR="Variable Framerate (VFR)"
