--- a/plugins/coreaudio-encoder/data/locale/en-US.ini
+++ b/plugins/coreaudio-encoder/data/locale/en-US.ini
@@ -1,3 +1,5 @@
 CoreAudioAAC="CoreAudio AAC encoder"
 Bitrate="Bitrate"
 AllowHEAAC="Allow HE-AAC"
+OutputSamplerate="Output Sample Rate"
+UseInputSampleRate="Use Input (OBS) Sample Rate (may list unsupported bitrates)"
