UI: Add OBS_PROPERTY_FRAME_RATE implementation

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -173,6 +173,11 @@ Basic.PropertiesWindow.AddEditableListFiles="Add files to '%1'"
 Basic.PropertiesWindow.AddEditableListEntry="Add entry to '%1'"
 Basic.PropertiesWindow.EditEditableListEntry="Edit entry from '%1'"
 
+# properties view
+Basic.PropertiesView.FPS.Simple="Simple FPS Values"
+Basic.PropertiesView.FPS.Rational="Rational FPS Values"
+Basic.PropertiesView.FPS.ValidFPSRanges="Valid FPS Ranges:"
+
 # interaction window
 Basic.InteractionWindow="Interacting with '%1'"
 
