--- a/plugins/mac-avcapture/data/locale/en-US.ini
+++ b/plugins/mac-avcapture/data/locale/en-US.ini
@@ -3,3 +3,6 @@ Device="Device"
 UsePreset="Use Preset"
 Preset="Preset"
 Buffering="Use Buffering"
+FrameRate="Frame rate"
+InputFormat="Input format"
+Auto="Auto"
