--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -326,6 +326,9 @@ Basic.Settings.Output.Adv.Recording.Type="Type"
 Basic.Settings.Output.Adv.Recording.Type.Standard="Standard"
 Basic.Settings.Output.Adv.Recording.Type.FFmpegOutput="Custom Output (FFmpeg)"
 Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Use stream encoder)"
+Basic.Settings.Output.Adv.FFmpeg.Type="FFmpeg Output Type"
+Basic.Settings.Output.Adv.FFmpeg.Type.URL="Output to URL"
+Basic.Settings.Output.Adv.FFmpeg.Type.RecordToFile="Output to File"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Common recording formats"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="All Files"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="File path or URL"
