--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -50,6 +50,6 @@ NoiseGate.AttackTime="Attack Time (milliseconds)"
 NoiseGate.HoldTime="Hold Time (milliseconds)"
 NoiseGate.ReleaseTime="Release Time (milliseconds)"
 Gain.GainDB="Gain (dB)"
-Compressor.UpperThreshold="Lower Threshold (dB)"
-Compressor.LowerThreshold="Upper Threshold (dB)"
+Compressor.UpperThreshold="Upper Threshold (dB)"
+Compressor.LowerThreshold="Lower Threshold (dB)"
 Compressor.Multiplier="Multiplier"
