UI: Increase clarity of exit message

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -56,7 +56,7 @@ NoNameEntered.Text="You cannot use empty names."
 
 # confirm exit dialog box
 ConfirmExit.Title="Exit OBS?"
-ConfirmExit.Text="OBS is currently active.  Are you sure you wish to exit?"
+ConfirmExit.Text="OBS is currently active.  All streams/recordings will be shut down.  Are you sure you wish to exit?"
 
 # confirm delete dialog box
 ConfirmRemove.Title="Confirm Remove"
