UI: Add stream delay options to advanced settings
I added stream delay options to advanced settings not just because I
feel it's an advanced option, but also to reduce clutter in the outputs
section and its sub-sections, which already have far too many options as
it is.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -42,6 +42,7 @@ Hide="Hide"
 Untitled="Untitled"
 New="New"
 Duplicate="Duplicate"
+Enable="Enable"
 
 # title bar strings
 TitleBar.Profile="Profile"
@@ -391,6 +392,10 @@ Basic.Settings.Advanced.Video.ColorSpace="YUV Color Space"
 Basic.Settings.Advanced.Video.ColorRange="YUV Color Range"
 Basic.Settings.Advanced.Video.ColorRange.Partial="Partial"
 Basic.Settings.Advanced.Video.ColorRange.Full="Full"
+Basic.Settings.Advanced.StreamDelay="Stream Delay"
+Basic.Settings.Advanced.StreamDelay.Duration="Duration (seconds)"
+Basic.Settings.Advanced.StreamDelay.Preserve="Preserve cutoff point (increase delay) when reconnecting"
+Basic.Settings.Advanced.StreamDelay.MemoryUsage="Estimated Memory Usage: %1 MB"
 
 # advanced audio properties
 Basic.AdvAudio="Advanced Audio Properties"
