UI: Implement stream delay
When stream delay is active, the "Start/Stop Streaming" button is
changed in to a menu button, which allows the user to select either the
option to stop the stream (which causes it to count down), or forcibly
stop the stream (which immediately stops the stream and cuts off all
delayed data).

If the user decides they want to start the stream again while in the
process of counting down, they can safely do so without having to wait
for it to stop, and it will schedule it to start up again with the same
delay after the stop.

On the status bar, it will now show whether delay is active, and its
duration.  If the stream is in the process of stopping/starting, it will
count down to the stop/start.

If the option to preserve stream cutoff point on unexpected
disconnections/reconnections is enabled, it will update the current
delay duration accordingly.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -175,6 +175,10 @@ Basic.InteractionWindow="Interacting with '%1'"
 Basic.StatusBar.Reconnecting="Disconnected, reconnecting in %2 second(s) (attempt %1)"
 Basic.StatusBar.AttemptingReconnect="Attempting to reconnect... (attempt %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconnection successful"
+Basic.StatusBar.Delay="Delay (%1 sec)"
+Basic.StatusBar.DelayStartingIn="Delay (starting in %1 sec)"
+Basic.StatusBar.DelayStoppingIn="Delay (stopping in %1 sec)"
+Basic.StatusBar.DelayStartingStoppingIn="Delay (stopping in %1 sec, starting in %2 sec)"
 
 # filters window
 Basic.Filters="Filters"
@@ -225,6 +229,7 @@ Basic.Main.StartRecording="Start Recording"
 Basic.Main.StartStreaming="Start Streaming"
 Basic.Main.StopRecording="Stop Recording"
 Basic.Main.StopStreaming="Stop Streaming"
+Basic.Main.ForceStopStreaming="Stop Streaming (discard delay)"
 
 # basic mode file menu
 Basic.MainMenu.File="&File"
