UI: Add custom muxer settings to advanced FFmpeg output

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -348,6 +348,7 @@ Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video Encoder Settings (if any)"
 Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Encoder Settings (if any)"
+Basic.Settings.Output.Adv.FFmpeg.MuxerSettings="Muxer Settings (if any)"
 
 # basic mode 'video' settings
 Basic.Settings.Video="Video"
