UI: Add more potential recording errors

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -74,6 +74,10 @@ Output.ConnectFail.Disconnected="Disconnected from server."
 # output recording-related messages
 Output.RecordFail.Title="Failed to start recording"
 Output.RecordFail.Unsupported="The output format is either unsupported or does not support more than one audio track.  Please check your settings and try again."
+Output.RecordNoSpace.Title="Insufficient disk space"
+Output.RecordNoSpace.Msg="There is not sufficient disk space to continue recording."
+Output.RecordError.Title="Recording error"
+Output.RecordError.Msg="An unspecified error occurred while recording."
 
 # output recording messages
 Output.BadPath.Title="Bad File Path"
